add grafana to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ out/
 # docker grafana
 .docker/grafana/plugins
 .docker/grafana/png
+.docker/grafana/grafana.db
 
 # docker prometheus
 .docker/prometheus/data
