--- a/nile-application/src/main/resources/application.yml
+++ b/nile-application/src/main/resources/application.yml
@@ -22,9 +22,13 @@ weather:
     - Beijing
     - Canberra
 
+
 management:
   endpoints.web.exposure.include: '*'
   metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
     tags:
       application: ${spring.application.name}
 
